04-inflight-conn/1-whoami-tcp.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: whoami-tcp
  namespace: app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: whoami-tcp
  template:
    metadata:
      labels:
        app: whoami-tcp
    spec:
      containers:
      - name: whoami-tcp
        image: traefik/whoamitcp:latest
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: whoami-tcp
  namespace: app
  labels:
    app: whoami-tcp
spec:
  type: ClusterIP
  ports:
  - port: 8080
    name: whoami-tcp
  selector:
    app: whoami-tcp
