04-inflight-conn/2-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-tcp
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb" # Ask for a Network Load Balancer on AWS
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      name: web
      port: 3179
  selector:
    app: traefik
